--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </p>
         </div>
         <div class="contact">
-          <a class="button" href="">
+          <a class="button" href="./cv/ashvin.pdf">
             Download CV
           </a>
 
