--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
       </main>
       <footer class="footer">
-        <p>&copy;2023. All rights reserved Tushil-G</p>
+        <p>&copy;2023. All rights reserved G. T. Kuma</p>
       </footer>
     </div>
     <noscript>
